--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>TinDog</title>
 
-    <!-- links to the fonts -->
+    <!-- links to Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,11 +30,17 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <!-- links to local JS-->
+    <!-- links to bootstrap JS-->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Font awesome -->
+    <script
+      src="https://kit.fontawesome.com/0ebcf438f2.js"
       crossorigin="anonymous"
     ></script>
   </head>
@@ -76,13 +82,21 @@
         </nav>
         <!-- Title -->
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 first-col">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn-lg btn-dark">Download</button>
-            <button type="button" class="btn-lg btn-light">Download</button>
+            <button type="button" class="btn btn-lg btn-dark">
+              <i class="fa-brands fa-apple"></i> Download
+            </button>
+            <button type="button" class="btn btn-lg btn-outline-light">
+              <i class="fa-brands fa-google-play"></i> Download
+            </button>
           </div>
           <div class="col-6">
-            <img src="images/iphone6.png" alt="iphone-mockup" />
+            <img
+              class="title-image"
+              src="images/iphone6.png"
+              alt="iphone-mockup"
+            />
           </div>
         </div>
       </div>
