--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
-        <div class="col-lg-4 col-md-6">
+        <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Chihuahua</h3>
@@ -217,14 +217,17 @@
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-lg btn-outline-primary" type="button">
+              <button
+                class="btn btn-lg btn-block btn-outline-dark"
+                type="button"
+              >
                 Sign Up
               </button>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6">
+        <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
               <h3>Labrador</h3>
@@ -234,13 +237,13 @@
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-lg btn-outline-primary" type="button">
+              <button class="btn btn-lg btn-block btn-dark" type="button">
                 Sign Up
               </button>
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="pricing-column col-lg-4">
           <div class="card">
             <div class="card-header">
               <h3>Mastiff</h3>
@@ -251,7 +254,7 @@
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
-              <button class="btn btn-lg btn-outline-primary" type="button">
+              <button class="btn btn-lg btn-block btn-dark" type="button">
                 Sign Up
               </button>
             </div>
