completed the html and css; refactoring needed

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
               </li>
             </ul>
           </div>
@@ -94,12 +94,14 @@
               <i class="fa-brands fa-google-play"></i> Download
             </button>
           </div>
-          <div class="col-6">
-            <img
-              class="title-image"
-              src="images/iphone6.png"
-              alt="iphone-mockup"
-            />
+          <div class="col-lg-6">
+            <div class="title-image-box">
+              <img
+                class="title-image"
+                src="images/iphone6.png"
+                alt="iphone-mockup"
+              />
+            </div>
           </div>
         </div>
       </div>
@@ -266,15 +268,23 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <h3 class="cta-blurb">Find the True Love of Your Dog's Life Today.</h3>
+      <button type="button" class="btn btn-lg btn-dark download-btn">
+        <i class="fa-brands fa-apple"></i>Download
+      </button>
+      <button type="button" class="btn btn-lg btn-light download-btn">
+        <i class="fa-brands fa-google-play"></i>Download
+      </button>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
-      <p>© Copyright TinDog</p>
+      <i class="icon-footer fa-brands fa-twitter"></i>
+      <i class="icon-footer fa-brands fa-facebook-f"></i>
+      <i class="icon-footer fa-brands fa-instagram"></i>
+      <i class="icon-footer fa-solid fa-envelope"></i>
+      <p>© Copyright 2023 TinDog</p>
     </footer>
   </body>
 </html>
