--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </head>
 
   <body>
-    <section id="title">
+    <section class="coloured-section" id="title">
       <div class="container-fluid">
         <!-- container-fluid / Fluid Container allows for the content to dynamically shift as the page is resized
           instead of having sudden shifts over certain breakpoints, as it happens with just the container class-->
@@ -83,7 +83,7 @@
         <!-- Title -->
         <div class="row">
           <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
+            <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-lg btn-dark download-btn">
               <i class="fa-brands fa-apple"></i> Download
             </button>
@@ -109,29 +109,23 @@
 
     <!-- Features -->
 
-    <section id="features">
+    <section class="white-section" id="features">
       <div class="container-fluid">
         <div class="row">
           <div class="feature-box col-lg-4">
             <i class="fa-solid fa-circle-check fa-4x fa-cg icon"></i>
-            <h3>Easy to use.</h3>
-            <p class="feature-blurb">
-              So easy to use, even your dog could do it.
-            </p>
+            <h3 class="feature-title">Easy to use.</h3>
+            <p>So easy to use, even your dog could do it.</p>
           </div>
           <div class="feature-box col-lg-4">
             <i class="fa-solid fa-bullseye fa-4x fa-cg icon"></i>
-            <h3>Elite Clientele</h3>
-            <p class="feature-blurb">
-              We have all the dogs, the greatest dogs.
-            </p>
+            <h3 class="feature-title">Elite Clientele</h3>
+            <p>We have all the dogs, the greatest dogs.</p>
           </div>
           <div class="feature-box col-lg-4">
             <i class="fa-solid fa-heart fa-4x fa-cg icon"></i>
-            <h3>Guaranteed to work.</h3>
-            <p class="feature-blurb">
-              Find the love of your dog's life or your money back.
-            </p>
+            <h3 class="feature-title">Guaranteed to work.</h3>
+            <p>Find the love of your dog's life or your money back.</p>
           </div>
         </div>
       </div>
@@ -139,15 +133,15 @@
 
     <!-- Testimonials -->
 
-    <section id="testimonials">
+    <section class="coloured-section" id="testimonials">
       <div
         id="testimonial-carousel"
         class="carousel slide"
         data-bs-ride="false"
       >
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <h2>
+          <div class="carousel-item active container-fluid">
+            <h2 class="testimonial-text">
               I no longer have to sniff other dogs for love. I've found the
               hottest Corgi on TinDog. Woof.
             </h2>
@@ -158,7 +152,7 @@
             />
             <em>Pebbles, New York</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">
               My dog used to be so lonely, but with TinDog's help, they've found
               the love of their life. I think.
@@ -192,7 +186,7 @@
 
     <!-- Press -->
 
-    <section id="press">
+    <section class="coloured-section" id="press">
       <img class="press-logo" src="images/techcrunch.png" alt="tc-logo" />
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
       <img
@@ -204,18 +198,18 @@
     </section>
 
     <!-- Pricing -->
-    <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
+    <section class="white-section" id="pricing">
+      <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
         <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Chihuahua</h3>
+              <h3 class="doge">Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>Free</h2>
+              <h2 class="price-text">Free</h2>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -232,10 +226,10 @@
         <div class="pricing-column col-lg-4 col-md-6">
           <div class="card">
             <div class="card-header">
-              <h3>Labrador</h3>
+              <h3 class="doge">Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h2 class="price-text">$49 / mo</h2>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
@@ -248,10 +242,10 @@
         <div class="pricing-column col-lg-4">
           <div class="card">
             <div class="card-header">
-              <h3>Mastiff</h3>
+              <h3 class="doge">Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h2 class="price-text">$99 / mo</h2>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
@@ -267,24 +261,30 @@
 
     <!-- Call to Action -->
 
-    <section id="cta">
-      <h3 class="cta-blurb">Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button" class="btn btn-lg btn-dark download-btn">
-        <i class="fa-brands fa-apple"></i>Download
-      </button>
-      <button type="button" class="btn btn-lg btn-light download-btn">
-        <i class="fa-brands fa-google-play"></i>Download
-      </button>
+    <section class="coloured-section" id="cta">
+      <div class="container-fluid">
+        <h3 class="big-heading">
+          Find the True Love of Your Dog's Life Today.
+        </h3>
+        <button type="button" class="btn btn-lg btn-dark download-btn">
+          <i class="fa-brands fa-apple"></i>Download
+        </button>
+        <button type="button" class="btn btn-lg btn-light download-btn">
+          <i class="fa-brands fa-google-play"></i>Download
+        </button>
+      </div>
     </section>
 
     <!-- Footer -->
 
-    <footer id="footer">
-      <i class="icon-footer fa-brands fa-twitter"></i>
-      <i class="icon-footer fa-brands fa-facebook-f"></i>
-      <i class="icon-footer fa-brands fa-instagram"></i>
-      <i class="icon-footer fa-solid fa-envelope"></i>
-      <p>© Copyright 2023 TinDog</p>
+    <footer class="white-section" id="footer">
+      <div class="container-fluid">
+        <i class="icon-footer fa-brands fa-twitter"></i>
+        <i class="icon-footer fa-brands fa-facebook-f"></i>
+        <i class="icon-footer fa-brands fa-instagram"></i>
+        <i class="icon-footer fa-solid fa-envelope"></i>
+        <p>© Copyright 2023 TinDog</p>
+      </div>
     </footer>
   </body>
 </html>
